--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,29 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import { languages, defaultLang } from '../i18n/utils';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+// Función para obtener el idioma preferido del navegador
+function getPreferredLanguage(acceptLanguage: string | null) {
+  if (!acceptLanguage) return defaultLang;
+
+  // Parsear el header Accept-Language
+  const browserLangs = acceptLanguage
+    .split(',')
+    .map(lang => lang.split(';')[0].trim().substring(0, 2).toLowerCase());
+
+  // Buscar el primer idioma que coincida con los disponibles
+  for (const lang of browserLangs) {
+    if (Object.keys(languages).includes(lang)) {
+      return lang;
+    }
+  }
+
+  return defaultLang;
+}
+
+// Obtener el idioma preferido del navegador
+const acceptLanguage = Astro.request.headers.get('accept-language');
+const preferredLanguage = getPreferredLanguage(acceptLanguage);
+
+// Redirigir a la página del idioma correspondiente
+return Astro.redirect('/' + preferredLanguage);
 ---
-
-<Layout>
-	<Welcome />
-</Layout>
