--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,7 +31,7 @@ const t = useTranslations(lang);
     <div class="hero-image" data-aos="fade-left" data-aos-delay="400">
       <div class="image-container">
         <img
-          src="https://media.licdn.com/dms/image/v2/C4E03AQGc8r7eAGWL4g/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1641712070449?e=1750896000&v=beta&t=X2ZLBTOR3SkWP800Z5F4uJ9OIRMpwzNNFJZFi-AEAt4"
+          src="/images/avatar.jpeg"
           alt="Ramón - Foto de perfil"
           class="profile-image"
         />
