Keep floating icons in mobile view and fix language selector position

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -780,12 +780,11 @@ const t = useTranslations(lang);
       margin-right: 5px;
     }
 
-    .mobile-language-picker {
-      margin-right: 5px;
-    }
-
-    .mobile-language-picker .language-picker {
-      transform: scale(0.9);
+    .desktop-language-picker {
+      position: absolute;
+      top: 15px;
+      right: 70px;
+      z-index: 10001;
     }
 
     .logo a {
